# tutorial_aiopika

./: compose.yaml  emit_log.py  new_task.py  pyproject.toml  receive.py  receive_logs.py  send.py  task_worker.py
