[tool.poetry]
name = "tutorial-aiopika"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tutorial_aiopika"}]

[tool.poetry.dependencies]
python = "^3.11"
aio-pika = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
